kubernetes/manifests/generated/development/infrastructure/linkerd/1-manifest/deployment-linkerd-linkerd-proxy-injector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.11.2"},"labels":{"app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"proxy-injector","app.kubernetes.io/part-of":"Linkerd","app.kubernetes.io/version":"stable-2.11.2","linkerd.io/control-plane-component":"proxy-injector","linkerd.io/control-plane-ns":"linkerd"},"name":"linkerd-proxy-injector","namespace":"linkerd"},"spec":{"replicas":1,"selector":{"matchLabels [...]
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: proxy-injector
    app.kubernetes.io/part-of: Linkerd
    app.kubernetes.io/version: stable-2.11.2
    linkerd.io/control-plane-component: proxy-injector
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-proxy-injector
  namespace: linkerd
spec:
  replicas: 1
  selector:
    matchLabels:
      linkerd.io/control-plane-component: proxy-injector
  template:
    metadata:
      annotations:
        checksum/config: 827c7d28b6d7984b018bf1fd79f6a1ef810eab6d1525f15dec956c6bd9093a0f
        config.linkerd.io/default-inbound-policy: all-unauthenticated
        config.linkerd.io/opaque-ports: "8443"
        linkerd.io/created-by: linkerd/helm stable-2.11.2
        linkerd.io/identity-mode: default
        linkerd.io/proxy-version: stable-2.11.2
        sealedsecrets.bitnami.com/managed: "true"
      labels:
        linkerd.io/control-plane-component: proxy-injector
        linkerd.io/control-plane-ns: linkerd
        linkerd.io/proxy-deployment: linkerd-proxy-injector
        linkerd.io/workload-ns: linkerd
    spec:
      containers:
        - env:
            - name: _pod_name
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: _pod_ns
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: _pod_nodeName
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: LINKERD2_PROXY_LOG
              value: warn,linkerd=info
            - name: LINKERD2_PROXY_LOG_FORMAT
              value: plain
            - name: LINKERD2_PROXY_DESTINATION_SVC_ADDR
              value: linkerd-dst-headless.linkerd.svc.cluster.local.:8086
            - name: LINKERD2_PROXY_DESTINATION_PROFILE_NETWORKS
              value: 10.0.0.0/8,100.64.0.0/10,172.16.0.0/12,192.168.0.0/16
            - name: LINKERD2_PROXY_POLICY_SVC_ADDR
              value: linkerd-policy.linkerd.svc.cluster.local.:8090
            - name: LINKERD2_PROXY_POLICY_WORKLOAD
              value: $(_pod_ns):$(_pod_name)
            - name: LINKERD2_PROXY_INBOUND_DEFAULT_POLICY
              value: all-unauthenticated
            - name: LINKERD2_PROXY_POLICY_CLUSTER_NETWORKS
              value: 10.0.0.0/8,100.64.0.0/10,172.16.0.0/12,192.168.0.0/16
            - name: LINKERD2_PROXY_INBOUND_CONNECT_TIMEOUT
              value: 100ms
            - name: LINKERD2_PROXY_OUTBOUND_CONNECT_TIMEOUT
              value: 1000ms
            - name: LINKERD2_PROXY_CONTROL_LISTEN_ADDR
              value: 0.0.0.0:4190
            - name: LINKERD2_PROXY_ADMIN_LISTEN_ADDR
              value: 0.0.0.0:4191
            - name: LINKERD2_PROXY_OUTBOUND_LISTEN_ADDR
              value: 127.0.0.1:4140
            - name: LINKERD2_PROXY_INBOUND_LISTEN_ADDR
              value: 0.0.0.0:4143
            - name: LINKERD2_PROXY_INBOUND_IPS
              valueFrom:
                fieldRef:
                  fieldPath: status.podIPs
            - name: LINKERD2_PROXY_INBOUND_PORTS
              value: 8443,9995
            - name: LINKERD2_PROXY_DESTINATION_PROFILE_SUFFIXES
              value: svc.cluster.local.
            - name: LINKERD2_PROXY_INBOUND_ACCEPT_KEEPALIVE
              value: 10000ms
            - name: LINKERD2_PROXY_OUTBOUND_CONNECT_KEEPALIVE
              value: 10000ms
            - name: LINKERD2_PROXY_INBOUND_PORTS_DISABLE_PROTOCOL_DETECTION
              value: 25,587,3306,4444,5432,6379,9300,11211
            - name: LINKERD2_PROXY_DESTINATION_CONTEXT
              value: |
                {"ns":"$(_pod_ns)", "nodeName":"$(_pod_nodeName)"}
            - name: _pod_sa
              valueFrom:
                fieldRef:
                  fieldPath: spec.serviceAccountName
            - name: _l5d_ns
              value: linkerd
            - name: _l5d_trustdomain
              value: cluster.local
            - name: LINKERD2_PROXY_IDENTITY_DIR
              value: /var/run/linkerd/identity/end-entity
            - name: LINKERD2_PROXY_IDENTITY_TRUST_ANCHORS
              valueFrom:
                configMapKeyRef:
                  key: ca-bundle.crt
                  name: linkerd-identity-trust-roots
            - name: LINKERD2_PROXY_IDENTITY_TOKEN_FILE
              value: /var/run/secrets/kubernetes.io/serviceaccount/token
            - name: LINKERD2_PROXY_IDENTITY_SVC_ADDR
              value: linkerd-identity-headless.linkerd.svc.cluster.local.:8080
            - name: LINKERD2_PROXY_IDENTITY_LOCAL_NAME
              value: $(_pod_sa).$(_pod_ns).serviceaccount.identity.linkerd.cluster.local
            - name: LINKERD2_PROXY_IDENTITY_SVC_NAME
              value: linkerd-identity.linkerd.serviceaccount.identity.linkerd.cluster.local
            - name: LINKERD2_PROXY_DESTINATION_SVC_NAME
              value: linkerd-destination.linkerd.serviceaccount.identity.linkerd.cluster.local
            - name: LINKERD2_PROXY_POLICY_SVC_NAME
              value: linkerd-destination.linkerd.serviceaccount.identity.linkerd.cluster.local
          image: cr.l5d.io/linkerd/proxy:stable-2.11.2
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - /usr/lib/linkerd/linkerd-await
                  - --timeout=2m
          livenessProbe:
            httpGet:
              path: /live
              port: 4191
            initialDelaySeconds: 10
          name: linkerd-proxy
          ports:
            - containerPort: 4143
              name: linkerd-proxy
            - containerPort: 4191
              name: linkerd-admin
          readinessProbe:
            httpGet:
              path: /ready
              port: 4191
            initialDelaySeconds: 2
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 2102
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /var/run/linkerd/identity/end-entity
              name: linkerd-identity-end-entity
        - args:
            - proxy-injector
            - -log-level=info
            - -log-format=plain
            - -enable-pprof=false
          image: cr.l5d.io/linkerd/controller:stable-2.11.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /ping
              port: 9995
            initialDelaySeconds: 10
          name: proxy-injector
          ports:
            - containerPort: 8443
              name: proxy-injector
            - containerPort: 9995
              name: admin-http
          readinessProbe:
            failureThreshold: 7
            httpGet:
              path: /ready
              port: 9995
          securityContext:
            runAsUser: 2103
          volumeMounts:
            - mountPath: /var/run/linkerd/config
              name: config
            - mountPath: /var/run/linkerd/identity/trust-roots
              name: trust-roots
            - mountPath: /var/run/linkerd/tls
              name: tls
              readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: linkerd-proxy-injector
      volumes:
        - configMap:
            name: linkerd-config
          name: config
        - configMap:
            name: linkerd-identity-trust-roots
          name: trust-roots
        - name: tls
          secret:
            secretName: linkerd-proxy-injector-k8s-tls
        - emptyDir: {}
          name: linkerd-proxy-init-xtables-lock
        - emptyDir:
            medium: Memory
          name: linkerd-identity-end-entity
